--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,6 +19,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
         pip install pytest
+        pip install numpy
         pip install ete3
     - name: Analysing the code with pylint
       run: |
