--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.13"]
     steps:
     - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
@@ -21,6 +21,7 @@ jobs:
         pip install pytest
         pip install numpy
         pip install ete3
+        pip install -e .
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py') --ignore-paths=docs/
