--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,9 +4,10 @@ name: Deploy documentation to pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-    paths: ["docs/_build/html/"]
-
+    branches:
+      - "main"
+    paths:
+      - "docs/"
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
